[package]
name = "kvs"
version = "0.1.0"
authors = ["Zhou Shaofeng <zhoushaofeng@mail.ustc.edu.cn>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"