[package]
name = "kvs"
version = "0.1.0"
authors = ["Zhou Shaofeng <zhoushaofeng@mail.ustc.edu.cn>"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = { version = "0.4", features = ["release_max_level_warn"] }
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
redis-protocol = "4"
bytes = "1"
redb = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3"
walkdir = "2.3"
rand = "0.8"
criterion = "0.4"